# MicMute

./: .gitignore  CHANGELOG.md  MicMute.spec  README.md  build_exe.py  build_exe_full.py  build_results.txt  debug_audio.py  debug_audio_pycaw.py  debug_meter.py  debug_meter_pycaw.py  dev_build.py  generate_spec.py  micmute_debug.spec  pyproject.toml  run.py  test_full.txt  test_results.txt
notebooks/: exploration.ipynb
src/MicMute/: __init__.py  _version.py  com_interfaces.py  config.py  core.py  gui.py  input_manager.py  main.py  overlay.py  utils.py
src/MicMute/gui/: __init__.py  devices.py  hotkeys.py  settings.py  theme.py
tests/: conftest.py  test_core.py  test_gui.py  test_main.py  test_overlay.py  test_utils.py
