[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MicMute"
version = "2.13.6"
description = "Microphone Mute Toggle with Native Hooks and Tray Icon"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pyside6>=6.10.1",
    "pycaw>=20251023",
    "pyinstaller>=6.17.0",
]

[project.scripts]
micmute = "MicMute.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["MicMute*"]

[tool.setuptools.package-data]
MicMute = ["assets/*.svg"]
